Adding login validators and normalizing register and login

--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -8,7 +8,7 @@
     </div>
     <div id="login" class="col s6 offset-s3">
       {{#if loginError}}
-        <p class="alert">{{LoginError}}</p>
+        <p class="alert">{{loginError}}</p>
       {{/if}}
       <h1>
         Log in to Shop
